added script to modal vindow display

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 @import url("./breadcrumbs/style.css");
 @import url("./filter/style.css");
 @import url("./pagination/style.css");
+@import url("./posts/modal-window/style.css");
 
 /* fonts */
 
@@ -73,208 +74,6 @@ article[role="main"] header {
     background-color: rgb(34, 34, 34);
   }
 }
-
-/* modal window */
-
-.modal-wrapper {
-  background-color: rgba(0, 0, 0, 0.5);
-  position: fixed;
-  overflow: auto;
-  display: -ms-grid;
-  display: grid;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-.modal-window {
-  background-color: white;
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
-  align-self: center;
-}
-
-.modal-window .user-image {
-  background-image: url("../images/users/till-lindemann.jpg");
-  overflow: hidden;
-  position: relative;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border-radius: 50%;
-  height: 40px;
-  width: 40px;
-}
-
-.modal-window header {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: 1fr 22px;
-  -ms-grid-columns: 1fr 22px;
-  margin-left: -10px;
-  padding: 10px;
-}
-
-.modal-window header .user-wrapper {
-  -ms-grid-column: 1;
-}
-
-.modal-window header .close {
-  -ms-grid-column: 2;
-}
-
-.modal-window .user-wrapper .user {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: 40px 1fr;
-  -ms-grid-columns: 40px 1fr;
-}
-
-.modal-window .user > div:hover {
-  cursor: pointer;
-}
-
-.modal-window .user .user-image {
-  -ms-grid-column: 1;
-}
-
-.modal-window .user .user-name {
-  -ms-grid-column: 2;
-}
-
-.modal-window .user-name {
-  margin-left: 10px;
-}
-
-.user > div {
-  align-self: center;
-}
-
-.modal-window .user-name {
-  font-weight: bold;
-  font-size: 14px;
-  color: rgb(51, 51, 51);
-}
-
-.modal-window .close img {
-  align-self: center;
-  margin-left: 10px;
-  height: 16px;
-}
-
-.modal-content .content-wrapper {
-  display: -ms-grid;
-  display: grid;
-}
-
-.content-image {
-  justify-self: center;
-}
-
-.content-image > img {
-  max-width: 800px;
-  width: 100%;
-  height: auto;
-}
-
-/* social */
-
-.modal-window .social-wrapper {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: 90px 80px 100px;
-  padding: 10px;
-}
-
-.modal-window .like-wrapper {
-  display: -ms-grid;
-  display: grid;
-  grid-template-columns: 30px 1fr;
-}
-
-.modal-window .like {
-  display: grid;
-}
-
-.modal-window .like-wrapper img {
-  justify-self: center;
-  height: 20px;
-}
-
-.modal-window .like-wrapper .number {
-  font-weight: bold;
-}
-
-.modal-window .share > div {
-  width: 65px;
-}
-
-.modal-window .download > div {
-  width: 100px;
-}
-
-.modal-window .share-button > div:hover {
-  background-color: rgb(204, 204, 204);
-}
-
-.modal-window .share-button > div {
-  background-color: rgb(228, 228, 228);
-  margin-top: -5px;
-  padding: 4px;
-  padding-left: 6px;
-}
-
-.modal-window .share-button > div > div {
-  display: inline-block;
-}
-
-.modal-window .share-button img {
-  height: 15px;
-  margin-right: 2px;
-  margin-bottom: -2px;
-}
-
-/* !social */
-
-/* modal footer */
-
-.modal-footer {
-  padding: 10px;
-}
-
-/* tags */
-
-.modal-window .close,
-.modal-window .like,
-.modal-window .share-button,
-.tag-list .tag {
-  cursor: pointer;
-}
-
-.tag-wrapper h2 {
-  font-weight: lighter;
-  color: rgb(36, 36, 36);
-}
-
-.tag-list .tag {
-  display: inline-block;
-  padding: 5px;
-  background-color: rgb(193, 193, 196);
-  color: rgb(68, 68, 68);
-}
-
-.tag-list .tag:hover {
-  background-color: rgb(167, 167, 167);
-  color: rgb(22, 22, 22);
-}
-
-/* !tags */
-
-/* !modal footer */
-
-/* !modal window */
 
 .inline-menu li {
   cursor: pointer;
