--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
 @import url("./filter/style.css");
 @import url("./pagination/style.css");
 @import url("./posts/modal-window/style.css");
+@import url("./about-us/style.css");
+@import url("./links/style.css");
 
 /* fonts */
 
@@ -31,7 +33,6 @@ body > header h2 {
 
 body > header {
   height: 370px;
-  background-image: url("../images/header/alessandro-sacchi.jpg");
   overflow: hidden;
   position: relative;
   background-size: cover;
@@ -40,6 +41,10 @@ body > header {
   margin-top: -8px;
   margin-left: -8px;
   margin-right: -8px;
+}
+
+body > header:not([id="about-us"]) {
+  background-image: url("../images/header/alessandro-sacchi.jpg");
 }
 
 h1 {
