--- a/styles/posts/style.css
+++ b/styles/posts/style.css
@@ -14,7 +14,7 @@
 }
 
 .post {
-  background-image: url("../../images/header/kaidi-guo.jpg");
+  /* background-image: url("../../images/header/kaidi-guo.jpg"); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
