--- a/styles/menu/style.css
+++ b/styles/menu/style.css
@@ -1,9 +1,13 @@
-#main-menu {
-  font-size: 15px;
+nav ul {
+  position: relative;
 }
 
 .burger {
   margin-top: -4px;
+}
+
+.burger .main-menu-list {
+  margin-right: -15px;
 }
 
 .inline-menu {
@@ -14,22 +18,27 @@
 #main-menu {
   margin-top: -10px;
   margin-left: -100px;
+  font-size: 15px;
 }
 
-#main-menu > ul {
+.vertical-line {
+  border-right: 1px solid rgb(185, 185, 185);
+  padding-right: 10px;
+}
+
+/* #main-menu > ul {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
   grid-template-columns: 75px 75px 75px 30px;
-}
+} */
 
 .burger li {
   display: none;
 }
 
 .burger .main-menu-list {
-  top: 0;
-  margin-top: 42px;
+  display: none;
 }
 
 .dropdown-menu,
@@ -38,7 +47,7 @@
   position: absolute;
   list-style-type: none;
   width: 150px;
-  margin-top: 38px;
+  margin-top: 32px;
   padding: 0;
   top: 0;
 }
@@ -62,32 +71,18 @@
   padding: 5px;
 }
 
-.dropdown .main-menu-list > li:first-child,
-.dropdown .dropdown-menu > li:first-child {
-  margin-top: 10px;
-}
-
-.dropdown .main-menu-list > li:hover,
-.dropdown .dropdown-menu > li:hover {
-  background-color: rgb(63, 63, 63);
-}
-
 /* sub menu */
 
 .sub-menu {
-  width: 100%;
   list-style-type: none;
   margin-top: 5px;
+  width: 150px;
   padding: 0;
 }
 
 .inline-menu .sub-menu,
-.burger .dropdown > ul {
+.burger .sub-menu/* .dropdown > ul  */ {
   display: none;
-}
-
-.sub-menu {
-  width: 150px;
 }
 
 .inline-menu .sub-menu {
@@ -108,8 +103,10 @@
   background-color: rgb(177, 177, 177);
 }
 
-.sub-menu.light > li:hover {
-  background-color: rgb(248, 248, 248);
+.light > li:hover {
+  border-bottom: 1px solid rgb(34, 34, 34);
+  /* 
+  background-color: rgb(248, 248, 248); */
 }
 
 .sub-menu.light > li,
@@ -132,8 +129,10 @@
   color: white;
 }
 
-.sub-menu.dark > li:hover {
-  background-color: rgb(63, 63, 63);
+.dark > li:hover {
+  border-bottom: 1px solid rgb(177, 177, 177);
+  /* 
+  background-color: rgb(63, 63, 63); */
 }
 
 /* !dark */
@@ -144,13 +143,8 @@
   height: 10px;
 }
 
-.sub-menu-contariner {
-  width: 80px;
-  margin-left: -13px;
-}
-
 .sub-menu-wrapper label {
-  width: 100%;
+  /* width: 100%; */
 }
 
 .more-icon,
@@ -162,14 +156,36 @@
   margin-bottom: -3px;
 }
 
+#main-menu {
+  display: grid;
+  justify-items: end;
+}
+
+.inline-menu > li {
+  display: inline-block;
+}
+
+.inline-menu {
+  justify-self: end;
+}
+
+.inline-menu li {
+  cursor: pointer;
+  margin-right: 10px;
+}
+
 @media screen and (max-width: 820px) {
   .header-wrapper input {
     width: 90%;
   }
 
+  .burger li {
+    cursor: pointer;
+  }
+
   .main-menu-list {
-    font-size: 17px;
-    width: 100%;
+    /* font-size: 17px; */
+    font-size: 15px;
   }
 
   #main-menu {
