--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url("./menu/style.css");
 @import url("./search/style.css");
 @import url("./posts/style.css");
-@import url("./breadcrumbs/style.css");
+@import url("./breadcrums/style.css");
 @import url("./filter/style.css");
 @import url("./pagination/style.css");
 @import url("./posts/modal-window/style.css");
@@ -35,6 +35,14 @@ body > header h2 {
   font-family: "Allura Regular";
 }
 
+/* disabled pages */
+
+#page_about-us {
+  display: none;
+}
+
+/* !disabled pages */
+
 /* !fonts */
 
 body > header {
@@ -49,7 +57,7 @@ body > header {
   margin-right: -8px;
 }
 
-body > header:not([id="about-us"]) {
+body > header {
   background-image: url("../images/header/alessandro-sacchi.jpg");
 }
 
@@ -91,7 +99,8 @@ article[role="main"] header {
 }
 
 .inline-menu > li:hover {
-  color: rgb(170, 170, 170);
+  /* 
+  color: rgb(170, 170, 170); */
 }
 
 /* IE header elements columns placing */
