--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 @import url("./menu/style.css");
 @import url("./search/style.css");
 @import url("./posts/style.css");
-@import url("./breadcrums/style.css");
+@import url("./breadcrumbs/style.css");
 @import url("./filter/style.css");
 @import url("./pagination/style.css");
 @import url("./posts/modal-window/style.css");
