began work on filter

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url("./menu/style.css");
 @import url("./search/style.css");
+@import url("./posts/filter/style.css");
 @import url("./posts/style.css");
 @import url("./breadcrumbs/style.css");
 @import url("./filter/style.css");
