--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url("./menu/style.css");
 @import url("./search/style.css");
+@import url("./page-selector/style.css");
 @import url("./posts/filter/style.css");
 @import url("./posts/style.css");
 @import url("./breadcrumbs/style.css");
@@ -8,6 +9,7 @@
 @import url("./posts/modal-window/style.css");
 @import url("./about-us/slider/style.css");
 @import url("./about-us/style.css");
+@import url("./upload/style.css");
 @import url("./links/style.css");
 
 /* fonts */
@@ -36,14 +38,6 @@ body {
 body > header h2 {
   font-family: "Allura Regular";
 }
-
-/* disabled pages */
-
-#page_about-us {
-  display: none;
-}
-
-/* !disabled pages */
 
 /* !fonts */
 
