--- a/styles/style.css
+++ b/styles/style.css
@@ -54,6 +54,16 @@ body > header {
   margin-right: -8px;
 }
 
+#logo {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 820px) {
+  body > header {
+    height: 200px;
+  }
+}
+
 h1 {
   font-size: 30px;
 }
